# air-quality-prediction

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml
conf/: config.yaml
conf/data/: data.yaml
conf/data_download/: download.yaml
conf/logging/: logging.yaml
conf/model/: base_model.yaml  tabtransformer.yaml
src/air_quality_prediction/: __init__.py  command.py  train.py
src/air_quality_prediction/data/: datamodule.py  dataset.py  download.py  download_data.py
src/air_quality_prediction/models/: base_model.py  module.py  tab_transformer.py  train.py
src/air_quality_prediction/preprocessing/: preprocessing.py
src/air_quality_prediction/utils/: logger.py
